# affine-sn120

./: .2env  .dockerignore  .env.example  .env.miner.example  .env.validator.example  .gitignore  Dockerfile  Makefile  README.md  README1.md  README_MINER_SETUP.md  abduction.py  build_and_push.sh  deduction.py  docker-compose.local.yml  docker-compose.yml  example.py  extract_dataset.py  gpqa.py  hippius.py  llm.txt  llms.txt  prometheus.yml  push_to_hf.py  pyproject.toml  pytest.ini  rg.ipynb  scratch.ipynb  split_dataset.py  upload_download.py  validator.Dockerfile
.github/workflows/: main.yml
affine/: __init__.py  bucket.py  chutes.py  cli.py  config.py  config_utils.py  database.py  dataset.py  deployment.py  envs.py  exceptions.py  invalidation.py  llm.py  logging.py  logging_config.py  miners.py  program_executor.py  results.py  rollup.py  runner.py  sample_manager.py  sdk.py  signer.py  theme.py  utils.py  val_config.py  validator.py
affine/environments/: CMPLX.py  SAT1.py  __init__.py  base.py
affine/envs/: COIN.py  NTH.py  SAT.py  __init__.py  abd.py  abd_.py  abduction.py  boolcircuit.py  ded.py  deduction.py  elr.py  frozenlake_logic.py  gaia.py  gpqa.py  graphsp.py  gridmaze.py  gsm8k.py  hvm.py  knapsack.py  math.py  parity.py  research.py  sat.py  sortlist.py  sudoku_4x4.py  test_gsm8k.py  tower_of_hanoi.py  twosat.py
affine/utils/: __init__.py  dataset.py  executor.py  program_executor.py
e2b/: e2b.Dockerfile  e2b.toml
envs/: __init__.py
notebooks/: note1.ipynb
ops/: docker-compose.yml
ops/docker/: docker-compose.validator.yml  docker-compose.yml
utils/: __init__.py  elo.py  s3_trace.py
