[project]
name = "affine"
version = "0.1.0"
description = "Anima Machina"
authors = [{ name = "affine", email = "affine@affine.io" }]
dependencies = [
    "openai",
    "rich",
    "python-dotenv",
    "pydantic-settings",
    "bittensor",
    "async_lru",
    "botocore",
    "aiobotocore",
    "ipykernel",
    "click",
    "aiohttp",
    "nest-asyncio",
    "ipywidgets>=8.1.7",
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
af = "affine.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["affine"]
exclude = ["results"]
