[project]
name = "affine"
version = "0.1.0"
description = "Anima Machina"
authors = [{ name = "affine", email = "affine@affine.io" }]
dependencies = [
    "python-dotenv>=0.21.0",
    "bittensor>=6.3.0",
    "bittensor-cli>=6.3.0",
    "aiohttp>=3.10.11",
    "ipykernel>=6.0.0",
    "click>=8.0.0",
    "click-log>=0.4.0",
    "alive_progress>=3.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24",
    "redis==5.*", 
    "boto3>=1.34", 
    "huggingface_hub",
    "transformers",
    "torch",
    "torchvision",
    "accelerate",
    "datasets",
]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
af = "affine:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["affine"]

[tool.uv.sources]
affine = { path = ".", editable = true }
