[project]
name = "affine"
version = "0.1.0"
description = "Anima Machina"
authors = [{ name = "affine", email = "affine@affine.io" }]
dependencies = [
    "python-dotenv>=0.21.0",
    "bittensor",
    "bittensor-cli",
    "chutes",
    "aiohttp>=3.10.11",
    "ipykernel>=6.0.0",
    "click>=8.0.0",
    "click-log>=0.4.0",
    "alive_progress>=3.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24",
    "redis==5.*",
    "boto3>=1.34",
    "huggingface_hub",
    "datasets",
    "aiobotocore>=2.23.0",
    "botocore>=1.38.27",
    "tabulate>=0.9.0",
    "prometheus-client>=0.21.0",
    "aiofiles>=24.1.0",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.43",
    "nest-asyncio>=1.6.0",
]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
af = "affine:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["affine"]

[tool.uv.sources]
affine = { path = ".", editable = true }
